<resources>
    <string name="app_name">FragmentTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="Login">登录</string>
    <string name="register">没有账号？点击注册</string>
    <string name="sign">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">请确认密码</string>
    <string name="name">姓名</string>
    <string name="Logout">退出登录</string>
</resources>