<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:src="@drawable/head"
            android:contentDescription="TopImage">
        </ImageView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:hint="@string/username"
                android:maxLines="1">

            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1">

            </EditText>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/signIn"
                android:text="@string/Login"
                android:textSize="24sp"
                android:layout_marginTop="50dp"
                android:background="#03A9F4"
                >
            </Button>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/register"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="#00BCD4"
                android:background="#01000000"
                >
            </Button>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/skip"
                android:text="跳过"
                android:textSize="16sp"
                android:textColor="#00BCD4"
                android:background="#01000000"
                >
            </Button>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


